:art: Force add license header

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -25,19 +25,20 @@ file_length:
 
 file_header:
   required_pattern: |
-    \/\/
-    \/\/  .*?\.swift
-    \/\/  Indexing Your Heart
-    \/\/
-    \/\/  Created by .*? on \d{1,2}\/\d{1,2}\/\d{2}\.
-    \/\/
-    \/\/  This file is part of Indexing Your Heart\.
-    \/\/
-    \/\/  Indexing Your Heart is non-violent software: you can use, redistribute, and\/or modify it under the terms of the
-    \/\/  CNPLv7\+ as found in the LICENSE file in the source code root directory or at \<https:\/\/git\.pixie\.town\/thufie\/npl-builder\>\.
-    \/\/
-    \/\/  Indexing Your Heart comes with ABSOLUTELY NO WARRANTY, to the extent permitted by applicable law\. See the CNPL for
-    \/\/  details\.
+                    \/\/
+                    \/\/  .*?\.swift
+                    \/\/  Indexing Your Heart
+                    \/\/
+                    \/\/  Created by .*? on \d{1,2}\/\d{1,2}\/\d{2}\.
+                    \/\/
+                    \/\/  This file is part of Indexing Your Heart\.
+                    \/\/
+                    \/\/  Indexing Your Heart is non-violent software: you can use, redistribute, and\/or modify it under the terms of the
+                    \/\/  CNPLv7\+ as found in the LICENSE file in the source code root directory or at
+                    \/\/  \<https:\/\/git\.pixie\.town\/thufie\/npl-builder\>\.
+                    \/\/
+                    \/\/  Indexing Your Heart comes with ABSOLUTELY NO WARRANTY, to the extent permitted by applicable law\. See the CNPL for
+                    \/\/  details\.
 
 custom_rules:
   no_capstone_name:
