--- a/Indexing-Your-Heart-Info.plist
+++ b/Indexing-Your-Heart-Info.plist
@@ -4,5 +4,13 @@
 <dict>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Shared/Assets/Fonts/Salmon Mono 9 Regular.ttf</string>
+		<string>Shared/Assets/Fonts/Salmon Sans 9 Regular.ttf</string>
+		<string>Shared/Assets/Fonts/Salmon Serif 9 Bold.ttf</string>
+		<string>Shared/Assets/Fonts/Salmon Sans 9 Bold.ttf</string>
+		<string>Shared/Assets/Fonts/Salmon Serif 9 Regular.ttf</string>
+	</array>
 </dict>
 </plist>
