:lipstick: Create main menu, update window
A prototype main menu is in place, which displays the game's name
and provides an option to start the demo scene. This menu now works
across iOS and macOS with some aspect ratio constraints (16/9).

Additionally, the Entrypoint now contains app delegates on the iOS
and macOS side for specific operations that the SwiftUI app lifecycle
may not be ready for, such as authenticating with Game Center and
forcing the aspect ratio of a window when resizing.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Indexing-Your-Heart-Info.plist
+++ b/Indexing-Your-Heart-Info.plist
@@ -6,11 +6,11 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Shared/Assets/Fonts/Salmon Mono 9 Regular.ttf</string>
-		<string>Shared/Assets/Fonts/Salmon Sans 9 Regular.ttf</string>
-		<string>Shared/Assets/Fonts/Salmon Serif 9 Bold.ttf</string>
-		<string>Shared/Assets/Fonts/Salmon Sans 9 Bold.ttf</string>
-		<string>Shared/Assets/Fonts/Salmon Serif 9 Regular.ttf</string>
+		<string>Salmon Mono 9 Regular.ttf</string>
+		<string>Salmon Sans 9 Regular.ttf</string>
+		<string>Salmon Serif 9 Bold.ttf</string>
+		<string>Salmon Sans 9 Bold.ttf</string>
+		<string>Salmon Serif 9 Regular.ttf</string>
 	</array>
 </dict>
 </plist>
