:white_check_mark: Add unit test target

--- a/Indexing Your Heart.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
+++ b/Indexing Your Heart.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "956B604A28C7B7480031794C"
+               BuildableName = "Testbench.xctest"
+               BlueprintName = "Testbench"
+               ReferencedContainer = "container:Indexing Your Heart.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
