:wrench: Create temporary launch screen
Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Indexing-Your-Heart-Info.plist
+++ b/Indexing-Your-Heart-Info.plist
@@ -12,5 +12,12 @@
 		<string>Salmon Sans 9 Bold.ttf</string>
 		<string>Salmon Serif 9 Regular.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>LaunchScreenBackground</string>
+		<key>UIImageName</key>
+		<string>LaunchSplash</string>
+	</dict>
 </dict>
 </plist>
