--- a/Indexing-Your-Heart-Info.plist
+++ b/Indexing-Your-Heart-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
+	<key>PaintbrushRecordOutput</key>
+	<string>$(PNT_RECORD_OUTPUT)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Salmon Mono 9 Regular.ttf</string>
