:tada: Start work on Caslon
The Caslon module has been added to the project and is ready to be
developed. Currently, the package has two delegate protocols that
will need to be implemented in the real Caslon scene.

Shounin has been altered a bit to better separate the codebase.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -9,8 +9,9 @@ opt_in_rules:
   - inclusive_language
 
 included:
-  - Shared
-  - Tests
+  - Caslon/Sources
+  - Paintbrush/Sources
+  - Shounin
 
 type_name:
   allowed_symbols: ["_"]
