--- a/Shounin/Indexing-Your-Heart-Info.plist
+++ b/Shounin/Indexing-Your-Heart-Info.plist
@@ -21,5 +21,7 @@
 		<key>UIImageName</key>
 		<string>LaunchSplash</string>
 	</dict>
+	<key>UsesGameCenterFeatures</key>
+	<false/>
 </dict>
 </plist>
