--- a/Shounin/Indexing-Your-Heart-Info.plist
+++ b/Shounin/Indexing-Your-Heart-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>PaintbrushRecordOutput</key>
 	<string>$(PNT_RECORD_OUTPUT)</string>
 	<key>UIAppFonts</key>
