:sparkles: Add Protractor support to Paintbrush
The Protractor gesture algorithm has been added to Paintbrush in
addition to the original model. Paintbrush will still need to be
updated to utilize the algorithm instead of the Core ML system, but
this should be a matter of updating protocols.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Shounin.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
+++ b/Shounin/Shounin.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
@@ -42,6 +42,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PaintbrushProtractorTests"
+               BuildableName = "PaintbrushProtractorTests"
+               BlueprintName = "PaintbrushProtractorTests"
+               ReferencedContainer = "container:../Paintbrush">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "956B604A28C7B7480031794C"
+               BuildableName = "Testbench.xctest"
+               BlueprintName = "Testbench"
+               ReferencedContainer = "container:Shounin.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
