--- a/Shounin/Indexing Your Heart.entitlements
+++ b/Shounin/Indexing Your Heart.entitlements
@@ -6,6 +6,8 @@
 	<true/>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 </dict>
