:sparkles: Add footsteps
Finally, we have footstep sounds in the game that trigger when the
player moves around in the world.

I've also removed the ambient sounds for the panels in the main
environment, as it did result in significant memory increase. I will
investigate how to go about this better in the next sprint, M6.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Shounin.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
+++ b/Shounin/Shounin.xcodeproj/xcshareddata/xcschemes/Indexing Your Heart.xcscheme
@@ -91,7 +91,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "950F6CC628C0EADA007ACB53"
@@ -99,7 +100,7 @@
             BlueprintName = "Indexing Your Heart"
             ReferencedContainer = "container:Shounin.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
