:lipstick: Update launch screen
The launch screen now uses a special image that shows some text,
instead of a blank background with no image.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Indexing-Your-Heart-Info.plist
+++ b/Shounin/Indexing-Your-Heart-Info.plist
@@ -22,6 +22,8 @@
 		<string>LaunchScreenBackground</string>
 		<key>UIImageName</key>
 		<string>LaunchSplash</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
 	</dict>
 	<key>UsesGameCenterFeatures</key>
 	<false/>
