--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CranberrySprite"]
-	path = CranberrySprite
+	path = Modules/CranberrySprite
 	url = https://github.com/alicerunsonfedora/CranberrySprite
