:green_heart: Update unit tests file
Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches: [ root, devel, prototype ]
     paths:
-      - 'Caslon/**'
-      - 'Paintbrush/**'
+      - 'Modules/**'
       - 'Shounin/**'
   pull_request:
     branches: [ root, devel, prototype ]
