--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CranberrySprite"]
 	path = Modules/CranberrySprite
 	url = https://github.com/alicerunsonfedora/CranberrySprite
+[submodule "SwiftGodot"]
+	path = SwiftGodot
+	url = https://github.com/alicerunsonfedora/SwiftGodot
