--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -2,10 +2,7 @@ name: Run Unit Tests
 
 on:
   push:
-    branches: [ root, devel, prototype ]
-    paths:
-      - 'Modules/**'
-      - 'Shounin/**'
+    branches: [ root, devel, prototype, rewrite ]
   pull_request:
     branches: [ root, devel, prototype ]
   workflow_dispatch:
@@ -17,16 +14,12 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
-    - name: Setup Xcode version
-      uses: maxim-lobanov/setup-xcode@v1.5.1
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: latest-stable
-    - name: Install dependencies
-      run: bundle install
-    - name: Run tests in Fastlane
-      run: bundle exec fastlane unit_tests
+    - uses: extractions/setup-just@v1
+    - run: just test-all-deps
 
