--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -19,7 +19,7 @@ jobs:
         submodules: 'recursive'
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
-        xcode-version: 14.3.1
+        xcode-version: latest-stable
     - uses: extractions/setup-just@v1
     - run: just test-all-deps
 
