:recycle: Prebuild SwiftGodot.xcframework
This ensures that build times are kept minimally. However, for some
reason, this doesn't appear to work correctly with iOS.

--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ Shounin/resources/salmon
 Story Source/**.md
 
 # Prebuilt libraries
-Shounin/bin/*.dylib
-Shounin/bin/*.framework
+Shounin/bin/**/*.dylib
+Shounin/bin/**/*.framework
 old/
 *.xcframework
