:construction: Do stuff
JensonGodotKit is created, which will house all the logic for displaying
visual novel scenes through Godot. Currently, displaying dialogues is
supported.

The general build structure has also been updated to reference a Swift
package that contains the SwiftGodot xcframework, rather than adding the
same binary every time into each package. This allows the xcworkspace to
function again, since no single Swift package hosts the SwiftGodot
library.

build-libs has also been updated to change where the derived data goes
to so that some conflicts can be resolved more easily.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "SwiftGodot"]
-	path = SwiftGodot
+	path = SwiftGodot-Source
 	url = https://github.com/alicerunsonfedora/SwiftGodot
 [submodule "Shounin/addons/panku_console"]
 	path = Shounin/addons/panku_console
