--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,8 @@ opt_in_rules:
 
 included:
   - Protractor/Sources/
+  - AnthroBase/Sources/
+  - JensonGodotKit/Sources/
 
 type_name:
   allowed_symbols: ["_"]
