:construction_worker: Add Godot to unit tests

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -14,12 +14,20 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: 'recursive'
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: latest-stable
     - uses: extractions/setup-just@v1
+    - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
+    - uses: supplypike/setup-bin@v3
+      with:
+        uri: 'https://github.com/godotengine/godot/releases/download/4.0.3-stable/Godot_v4.0.3-stable_macos.universal.zip'
+        name: 'godot'
+        version: '4.0.3'
+        subPath: 'Godot.app/Contents/MacOS/'
+      env:
+        HOMEBREW_NO_AUTO_UPDATE: 1
     - run: just test-all-deps
 
