:test_tube: Add environment tests

--- a/Shounin/.gut_editor_config.json
+++ b/Shounin/.gut_editor_config.json
@@ -25,13 +25,13 @@
   "font_size": 30,
   "hide_output_text": false,
   "hide_result_tree": false,
-  "hide_settings": false,
+  "hide_settings": true,
   "use_colors": false
  },
  "post_run_script": "",
  "pre_run_script": "",
  "prefix": "test_",
- "selected": null,
+ "selected": "test_environment.gd",
  "should_exit": true,
  "should_exit_on_success": false,
  "should_maximize": false,
