:test_tube: Fix player movement tests
Some initialization needed to take place before the player could move.
This appears to only be an issue when the game is being run outside the
editor, which likely indicates it may be an extension-loading related
problem.

--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ Shounin/bin/**/*.framework
 old/
 *.xcframework
 
-# Product build logs
+# Product build, lint, and test logs
 *_build.log
 swiftlint_*.log
+integration_results_*.xml
