--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -32,6 +32,10 @@ jobs:
       with:
         name: swiftgodot-logs
         path: ~/sg-builds/**-build/*.log
+    - uses: actions/cache/save@v3
+      with:
+        path: SwiftGodot
+        key: ${{ runner.os }}-preflight-data
 
   test_unit:
     name: Unit Tests (Libraries)
@@ -39,6 +43,11 @@ jobs:
     needs: preflight
 
     steps:
+    - uses: actions/cache/restore@v3
+      id: cache-pull
+      with:
+        path: SwiftGodot
+        key: ${{ runner.os }}-preflight-data
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 14.3
@@ -52,6 +61,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
+    - name: Rebuild SwiftGodot
+      if: steps.cache-pull.outputs.cache-hit != 'true'
+      run: just build-swift-godot
     - run: just test-all-deps
 
 # TODO: Re-enable once Metal is enabled.
