--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,12 +30,12 @@ jobs:
     - run: just build-swift-godot
     - uses: actions/upload-artifact@v2
       with:
+        name: swiftgodot-package
+        path: SwiftGodot/
+    - uses: actions/upload-artifact@v2
+      with:
         name: swiftgodot-logs
         path: ~/sg-builds/**-build/*.log
-    - uses: actions/cache/save@v3
-      with:
-        path: SwiftGodot
-        key: ${{ runner.os }}-preflight-data
 
   test_unit:
     name: Unit Tests (Libraries)
@@ -43,11 +43,9 @@ jobs:
     needs: preflight
 
     steps:
-    - uses: actions/cache/restore@v3
-      id: cache-pull
+    - uses: actions/download-artifact@v2
       with:
-        path: SwiftGodot
-        key: ${{ runner.os }}-preflight-data
+        name: swiftgodot-package
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 14.3
@@ -61,9 +59,6 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
-    - name: Rebuild SwiftGodot
-      if: steps.cache-pull.outputs.cache-hit != 'true'
-      run: just build-swift-godot
     - run: just test-all-deps
 
 # TODO: Re-enable once Metal is enabled.
