:test_tube: Diagnose artifact downloading

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -57,8 +57,10 @@ jobs:
       with:
         submodules: 'recursive'
     - uses: actions/download-artifact@v2
+      id: download
       with:
         name: swiftgodot-package
+    - run: echo ${{steps.download.outputs.download-path}}
     - run: just test-all-deps
 
 # TODO: Re-enable once Metal is enabled.
