:see_no_evil: Add build intermediates
Prevents the xcbuild folder from being published by accident

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ integration_results_*.xml
 
 # Raw unswizzled assets
 Shounin/resources/characters/**.png
+
+# Dependency intermediates
+AnthroBase/xcbuild/
+Ashashat/xcbuild/
+Protractor/xcbuild/
+JensonGodotKit/xcbuild/
