--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,10 @@ jobs:
           aria2c 'https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_macos.universal.zip'
           unzip Godot_v4.1.1-stable_macos.universal.zip
       - run: |
-          just fetch-remote-deps
-          just build-swift-godot
+          just --set gdengine 'Godot.app/Contents/MacOS/godot' fetch-remote-deps
+          just --set gdengine 'Godot.app/Contents/MacOS/godot' build-swift-godot
       - run: |
-          just build-all-deps
-          just test-all-deps
+          just --set gdengine 'Godot.app/Contents/MacOS/godot' build-all-deps
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
