--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,12 @@ jobs:
       - run: |
           aria2c 'https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_macos.universal.zip'
           unzip Godot_v4.1.1-stable_macos.universal.zip
+          echo "export PATH=$(pwd)/Godot.app/Content/MacOS:$PATH" >> "$BASH_ENV"
       - run: |
-          just --set gdengine 'Godot.app/Contents/MacOS/godot' fetch-remote-deps
-          just --set gdengine 'Godot.app/Contents/MacOS/godot' build-swift-godot
+          just fetch-remote-deps
+          just build-swift-godot
       - run: |
-          just --set gdengine 'Godot.app/Contents/MacOS/godot' build-all-deps
+          just test-all-deps
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
