--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ jobs:
       - run: |
           aria2c 'https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_macos.universal.zip'
           unzip Godot_v4.1.1-stable_macos.universal.zip
-          echo "export PATH=$(pwd)/Godot.app/Content/MacOS:$PATH" >> "$BASH_ENV"
+          mv Godot.app /tmp/Godot.app
+          echo "export PATH='/tmp/Godot.app/Contents/MacOS:$PATH'" >> "$BASH_ENV"
       - run: |
-          ls -l
           just fetch-remote-deps
           just build-swift-godot
       - run: |
