--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,11 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-# For a detailed guide to building and testing on iOS, read the docs:
-# https://circleci.com/docs/testing-ios/
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   unit_test:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     macos:
-      xcode: 15.0.0 # Specify the Xcode version to use
+      xcode: 15.0.0
     environment:
       HOMEBREW_NO_AUTO_UPDATE: 1
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
       - run: git submodule sync
@@ -33,11 +22,24 @@ jobs:
       - run: just test-all-deps-ci
       - store_test_results:
           path: /tmp/testresults
+  lint:
+    macos:
+      xcode: 15.0.0
+    environment:
+      HOMEBREW_NO_AUTO_UPDATE: 1
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - run: brew install just swiftlint
+      - run: |
+          echo 'null' >> /tmp/godot
+          chmod +x /tmp/godot
+          echo "export PATH='/tmp/Godot.app/Contents/MacOS:$PATH'" >> "$BASH_ENV"
+      - run: just lint
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  unit_tests: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  merge_request:
     jobs:
+      - lint
       - unit_test
