--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           just build-swift-godot
       - run: mkdir -p workspace
       - run: cp -rf SwiftGodot/SwiftGodot.xcframework/ workspace/
-      - persist-to-workspace:
+      - persist_to_workspace:
           root: workspace
           paths:
             - SwiftGodot.xcframework
