--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,6 @@ integration_results_*.xml
 Shounin/resources/characters/**.png
 
 # Dependency intermediates
-AnthroBase/xcbuild/
-Ashashat/xcbuild/
-Protractor/xcbuild/
-JensonGodotKit/xcbuild/
+.mbuild
+.mxcbuild
+.mcache
