:construction: Do stuff
Remove Foundation imports (already covered by SwiftGodot), and change
the URL for JensonKit to the Gitlab dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Shounin/addons/panku_console"]
 	path = Shounin/addons/panku_console
 	url = https://github.com/Ark2000/panku_console
+[submodule "SwiftGodot"]
+	path = SwiftGodot
+	url = https://gitlab.com/indexing-your-heart/swiftgodot
