:art: Format files

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -15,6 +15,7 @@ included:
   - Protractor/Sources/
   - AnthroBase/Sources/
   - JensonGodotKit/Sources/
+  - Rollinsport/Sources/
 
 type_name:
   allowed_symbols: ["_"]
